# gmx_python_sdk_custom

./: pyproject.toml
contracts/avalanche/: exchangerouter.json
data_store/: arbitrum_data.json  arbitrum_gm_prices.json
gmx_python_sdk/contracts/arbitrum/: exchangerouter.json
gmx_python_sdk/contracts/avalanche/: syntheticsreader.json
gmx_python_sdk/data_store/: arbitrum_data.csv  arbitrum_gm_prices.csv  arbitrum_pool_tvl.json  arbitrum_total_tvl.csv
gmx_python_sdk/scripts/v2/: approve_token_for_spend.py  gas_utils.py  gmx_utils.py
gmx_python_sdk/scripts/v2/get/: get_available_liquidity.py  get_claimable_fees.py  get_funding_apr.py  get_gm_prices.py  get_markets.py  get_open_interest.py  get_oracle_prices.py
gmx_python_sdk/scripts/v2/order/: deposit.py  order_argument_parser.py  withdraw.py
scripts/v2/: keys.py
scripts/v2/get/: get.py  get_borrow_apr.py  get_open_positions.py
scripts/v2/order/: order.py
